Attempting to fix alignment issues on the about.html page

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -235,6 +235,6 @@ footer#connect {
   transform: translateX(-25px) translateY(-75px);
 }
 
-/* #arrow-wrapper {
-    margin-top: 75px;
-} */
+#arrow-wrapper {
+    margin-bottom: 75px;
+}
